Moved the story markup into it's component. Added some basic styling. - Each story now shows the title in bold followed by the URL.

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>HackerNews (Redux)</title>
+        <style>
+            * {
+                font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+                margin: 0px;
+                padding: 0px;
+            }
+        </style>
     </head>
     <body>
         <div id="app"></div>
