Stories now change color on hover.

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,10 @@
                 margin: 0px;
                 padding: 0px;
             }
+
+            ul > li:hover {
+                background-color: #f8f8f8 !important;
+            }
         </style>
     </head>
     <body>
